update feature before launching

--- a/src/app/layout/passport/passport.component.html
+++ b/src/app/layout/passport/passport.component.html
@@ -2,7 +2,7 @@
   <div class="wrap">
     <div class="top">
       <div class="head">
-        <img class="logo" src="./assets/logo-color.svg" />
+        <img class="logo" src="./assets/logo-cms-01c.svg" />
         <span class="title">CMS LBH</span>
       </div>
       <div class="desc">Case Management System</div>
