--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -2,13 +2,13 @@
   <a [routerLink]="['/']" class="alain-default__header-logo-link">
     <img
       class="alain-default__header-logo-expanded"
-      src="./assets/logo-full.svg"
+      src="./assets/logo-cms-01c.svg"
       alt="{{ settings.app.name }}"
-      style="max-height:40px;"
+      style="max-height:60px;"
     />
     <img
       class="alain-default__header-logo-collapsed"
-      src="./assets/logo.svg"
+      src="./assets/logo-cms-01c.svg"
       alt="{{ settings.app.name }}"
       style="max-height:30px;"
     />
