--- a/src/app/routes/dashboard/v1/v1.component.html
+++ b/src/app/routes/dashboard/v1/v1.component.html
@@ -1,90 +1,168 @@
-<div class="alain-default__content-title">
-  <h1>
-    Dashboard
+<page-header [title]="'Dashboard'">
+  <div nz-row>
+    <div nz-col>
+      <div nz-row nzGutter="16">
+        <nz-range-picker [nzDisabledTime]="true" nz-col [nzSpan]="5" [(ngModel)]="dateRange"></nz-range-picker>
+        <div nz-col [nzSpan]="1">
+          <button nz-button type="button" (click)="findData()" [nzLoading]="loading" [nzType]="'primary'" class="mx-sm">
+            Search
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</page-header>
 
-    <small>On Progress ;)</small>
-  </h1>
-</div>
-<nz-card [nzBordered]="false">
+<nz-card [nzBordered]="false" [nzTitle]="'Statistik Umum'">
   <div nz-row nzGutter="16">
     <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
       <div nz-row nzType="flex" nzAlign="middle" class="bg-primary rounded-md">
         <div nz-col nzSpan="12" class="p-md text-white">
-          <div class="h2 mt0">150</div>
-          <p class="text-nowrap mb0">Total Kasus</p>
-        </div>
-        <div nz-col nzSpan="12">
-          <g2-mini-bar
-            *ngIf="webSite"
-            height="35"
-            color="#fff"
-            borderWidth="3"
-            [padding]="[36, 30, 30, 30]"
-            [data]="webSite"
-            tooltipType="mini"
-          ></g2-mini-bar>
+          <div class="h2 mt0">{{ jumlahAplikasi }}</div>
+          <p class="text-nowrap mb0">Jumlah Permohonan Bantuan Hukum</p>
         </div>
       </div>
     </div>
     <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
       <div nz-row nzType="flex" nzAlign="middle" class="bg-success rounded-md">
         <div nz-col nzSpan="12" class="p-md text-white">
-          <div class="h2 mt0">80</div>
-          <p class="text-nowrap mb0">Klien Baru Bulan Ini</p>
-        </div>
-        <div nz-col nzSpan="12">
-          <g2-mini-bar
-            *ngIf="webSite"
-            height="35"
-            color="#fff"
-            borderWidth="3"
-            [padding]="[36, 30, 30, 30]"
-            [data]="webSite"
-            tooltipType="mini"
-          ></g2-mini-bar>
+          <div class="h2 mt0">{{ jumlahPenerimaManfaat }}</div>
+          <p class="text-nowrap mb0">Jumlah Penerima Manfaat</p>
         </div>
       </div>
     </div>
     <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
       <div nz-row nzType="flex" nzAlign="middle" class="bg-orange rounded-md">
         <div nz-col nzSpan="12" class="p-md text-white">
-          <div class="h2 mt0">100</div>
-          <p class="text-nowrap mb0">Kasus Selesai</p>
-        </div>
-        <div nz-col nzSpan="12">
-          <g2-mini-bar
-            *ngIf="webSite"
-            height="35"
-            color="#fff"
-            borderWidth="3"
-            [padding]="[36, 30, 30, 30]"
-            [data]="webSite"
-            tooltipType="mini"
-          ></g2-mini-bar>
+          <div class="h2 mt0">{{ jumlahTransfer }}</div>
+          <p class="text-nowrap mb0">Jumlah Transfer</p>
         </div>
       </div>
     </div>
     <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
       <div nz-row nzType="flex" nzAlign="middle" class="bg-magenta rounded-md">
         <div nz-col nzSpan="12" class="p-md text-white">
-          <div class="h2 mt0">150</div>
-          <p class="text-nowrap mb0">Total Klien</p>
+          <div class="h2 mt0">{{ jumlahRujukan }}</div>
+          <p class="text-nowrap mb0">Jumlah Rujukan</p>
         </div>
-        <div nz-col nzSpan="12">
-          <g2-mini-bar
-            *ngIf="webSite"
-            height="35"
-            color="#fff"
-            borderWidth="3"
-            [padding]="[36, 30, 30, 30]"
-            [data]="webSite"
-            tooltipType="mini"
-          ></g2-mini-bar>
+      </div>
+    </div>
+  </div>
+  <div nz-row nzGutter="16">
+    <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
+      <div nz-row nzType="flex" nzAlign="middle" class="bg-primary rounded-md">
+        <div nz-col nzSpan="12" class="p-md text-white">
+          <div class="h2 mt0">{{ jumlahKasus }}</div>
+          <p class="text-nowrap mb0">Jumlah Kasus</p>
+        </div>
+      </div>
+    </div>
+    <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
+      <div nz-row nzType="flex" nzAlign="middle" class="bg-success rounded-md">
+        <div nz-col nzSpan="12" class="p-md text-white">
+          <div class="h2 mt0">{{ jumlahKonsultasi }}</div>
+          <p class="text-nowrap mb0">Jumlah Konsultasi</p>
+        </div>
+      </div>
+    </div>
+    <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
+      <div nz-row nzType="flex" nzAlign="middle" class="bg-orange rounded-md">
+        <div nz-col nzSpan="12" class="p-md text-white">
+          <div class="h2 mt0">{{ kasusBerjalan }}</div>
+          <p class="text-nowrap mb0">Kasus Berjalan</p>
+        </div>
+      </div>
+    </div>
+    <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
+      <div nz-row nzType="flex" nzAlign="middle" class="bg-magenta rounded-md">
+        <div nz-col nzSpan="12" class="p-md text-white">
+          <div class="h2 mt0">{{ kasusSelesai }}</div>
+          <p class="text-nowrap mb0">Kasus Selesai</p>
         </div>
       </div>
     </div>
   </div>
 </nz-card>
+<!-- <nz-card [nzBordered]="false" [nzTitle]="'Grafik'">
+  <div nz-row nzGutter="16">
+    <div nz-col nzSpan="12">
+      <ngx-charts-bar-horizontal
+        [schemeType]="hakTerlanggarOption.schemeType"
+        [results]="hakTerlanggar"
+        [gradient]="hakTerlanggarOption.gradient"
+        [xAxis]="hakTerlanggarOption.showXAxis"
+        [yAxis]="hakTerlanggarOption.showYAxis"
+        [legend]="hakTerlanggarOption.showLegend"
+        [showXAxisLabel]="hakTerlanggarOption.showXAxisLabel"
+        [showYAxisLabel]="hakTerlanggarOption.showYAxisLabel"
+        [xAxisLabel]="hakTerlanggarOption.xAxisLabel"
+        [yAxisLabel]="hakTerlanggarOption.yAxisLabel"
+        [showGridLines]="hakTerlanggarOption.showGridLines"
+        [legendTitle]="hakTerlanggarOption.legendTitle"
+      ></ngx-charts-bar-horizontal>
+    </div>
+    <div nz-col nzSpan="12">
+      <ngx-charts-bar-vertical
+        [schemeType]="unitSatuanOption.schemeType"
+        [results]="unitSatuan"
+        [gradient]="unitSatuanOption.gradient"
+        [xAxis]="unitSatuanOption.showXAxis"
+        [yAxis]="unitSatuanOption.showYAxis"
+        [legend]="unitSatuanOption.showLegend"
+        [showXAxisLabel]="unitSatuanOption.showXAxisLabel"
+        [showYAxisLabel]="unitSatuanOption.showYAxisLabel"
+        [xAxisLabel]="unitSatuanOption.xAxisLabel"
+        [yAxisLabel]="unitSatuanOption.yAxisLabel"
+        [showGridLines]="unitSatuanOption.showGridLines"
+        [legendTitle]="unitSatuanOption.legendTitle"
+      ></ngx-charts-bar-vertical>
+    </div>
+  </div>
+  <div nz-row nzGutter="16">
+    <div nz-col nzSpan="12">
+      <ngx-charts-bar-vertical
+        [schemeType]="jenisPeradilanOption.schemeType"
+        [results]="jenisPeradilan"
+        [gradient]="jenisPeradilanOption.gradient"
+        [xAxis]="jenisPeradilanOption.showXAxis"
+        [yAxis]="jenisPeradilanOption.showYAxis"
+        [legend]="jenisPeradilanOption.showLegend"
+        [showXAxisLabel]="jenisPeradilanOption.showXAxisLabel"
+        [showYAxisLabel]="jenisPeradilanOption.showYAxisLabel"
+        [xAxisLabel]="jenisPeradilanOption.xAxisLabel"
+        [yAxisLabel]="jenisPeradilanOption.yAxisLabel"
+        [showGridLines]="jenisPeradilanOption.showGridLines"
+        [legendTitle]="jenisPeradilanOption.legendTitle"
+      ></ngx-charts-bar-vertical>
+    </div>
+    <div nz-col nzSpan="12">
+      <ngx-charts-pie-chart
+        [schemeType]="issueLokalOption.schemeType"
+        [results]="issueLokal"
+        [gradient]="issueLokalOption.gradient"
+        [legend]="issueLokalOption.showLegend"
+        [labels]="issueLokalOption.labels"
+        [legendTitle]="issueLokalOption.legendTitle"
+      ></ngx-charts-pie-chart>
+    </div>
+  </div>
+</nz-card> -->
+<nz-card [nzBordered]="false" [nzTitle]="'Peta Sebaran Klien'">
+  <div nz-row nzGutter="16">
+    <div nz-col nzSpan="24">
+      <agm-map style="height: 300px" [latitude]="-0.78927" [longitude]="113.921327" [zoom]="5">
+        <agm-marker-cluster
+          imagePath="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m"
+        >
+          <ng-container *ngFor="let map of latlngMap">
+            <agm-marker [latitude]="map?.lat" [longitude]="map?.lng"> </agm-marker>
+          </ng-container>
+        </agm-marker-cluster>
+      </agm-map>
+    </div>
+  </div>
+</nz-card>
+<!-- <pre> {{ dateRange | json }}</pre> -->
 <!-- <div nz-row nzGutter="16">
   <div nz-col nzXs="24" nzMd="12">
     <nz-card [nzBordered]="false" [nzTitle]="salesTitle">
