--- a/src/app/routes/form/person/create-person/create-person.component.html
+++ b/src/app/routes/form/person/create-person/create-person.component.html
@@ -1,4 +1,11 @@
 <page-header *ngIf="!parent" [title]="'Create Person'"></page-header>
 <nz-card [nzBordered]="false">
-  <sf #sf [schema]="schema" [formData]="editData" (formSubmit)="submit($event)" [loading]="loading"></sf>
+  <sf
+    [layout]="'vertical'"
+    #sf
+    [schema]="schema"
+    [formData]="editData"
+    (formSubmit)="submit($event)"
+    [loading]="loading"
+  ></sf>
 </nz-card>
