--- a/src/app/layout/passport/passport.component.html
+++ b/src/app/layout/passport/passport.component.html
@@ -8,9 +8,11 @@
       <div class="desc">Case Management System</div>
     </div>
     <router-outlet></router-outlet>
-    <!-- <global-footer>
-      Copyright
-      <i nz-icon nzType="copyright"></i> 2019 LBH Jakarta
-    </global-footer> -->
+    <global-footer>
+      <div>
+        <img class="credits" src="./assets/credits.jpg" />
+      </div>
+      v1.004
+    </global-footer>
   </div>
 </div>
