--- a/src/app/layout/passport/passport.component.less
+++ b/src/app/layout/passport/passport.component.less
@@ -64,6 +64,10 @@
       margin-right: 16px;
     }
 
+    .credits {
+      height: 200px;
+    }
+
     .title {
       position: relative;
       color: @heading-color;
