--- a/src/app/routes/dashboard/v1/v1.component.html
+++ b/src/app/routes/dashboard/v1/v1.component.html
@@ -83,7 +83,7 @@
     </div>
   </div>
 </nz-card>
-<!-- <nz-card [nzBordered]="false" [nzTitle]="'Grafik'">
+<nz-card [nzBordered]="false" [nzTitle]="'Grafik'">
   <div nz-row nzGutter="16">
     <div nz-col nzSpan="12">
       <ngx-charts-bar-horizontal
@@ -146,7 +146,7 @@
       ></ngx-charts-pie-chart>
     </div>
   </div>
-</nz-card> -->
+</nz-card>
 <nz-card [nzBordered]="false" [nzTitle]="'Peta Sebaran Klien'">
   <div nz-row nzGutter="16">
     <div nz-col nzSpan="24">
