--- a/src/app/routes/form/network/list-network/list-network.component.html
+++ b/src/app/routes/form/network/list-network/list-network.component.html
@@ -1,29 +1,21 @@
-<page-header *ngIf="!parent" [title]="'Daftar Kasus'"></page-header>
+<page-header *ngIf="!parent" [title]="'List Network'"></page-header>
 <div #card>
   <nz-card [nzBordered]="false">
     <form nz-form [nzLayout]="'inline'" (ngSubmit)="getData()" class="search__form">
       <div nz-row [nzGutter]="{ xs: 8, sm: 8, md: 8, lg: 24, xl: 48, xxl: 48 }">
         <div nz-col nzMd="8" nzSm="24">
           <nz-form-item>
-            <nz-form-label nzFor="namaLengkap">Nama Klien</nz-form-label>
+            <nz-form-label nzFor="name">Nama</nz-form-label>
             <nz-form-control>
-              <input nz-input [(ngModel)]="q.namaLengkap" name="namaLengkap" placeholder="nama" id="namaLengkap" />
+              <input nz-input [(ngModel)]="q.name" name="name" placeholder="nama" id="name" />
             </nz-form-control>
           </nz-form-item>
         </div>
         <div nz-col nzMd="8" nzSm="24">
           <nz-form-item>
-            <nz-form-label nzFor="judulKasus">Judul Kasus</nz-form-label>
+            <nz-form-label nzFor="email">Email</nz-form-label>
             <nz-form-control>
-              <input nz-input [(ngModel)]="q.judulKasus" name="judulKasus" placeholder="judul kasus" id="judulKasus" />
-            </nz-form-control>
-          </nz-form-item>
-        </div>
-        <div nz-col nzMd="8" nzSm="24" *ngIf="expandForm">
-          <nz-form-item>
-            <nz-form-label nzFor="noReg">Nomor Registrasi</nz-form-label>
-            <nz-form-control>
-              <input [(ngModel)]="q.noReg" name="noReg" placeholder="nomor registrasi" id="noReg" nz-input id="noReg" />
+              <input nz-input [(ngModel)]="q.email" name="email" placeholder="Email" id="email" />
             </nz-form-control>
           </nz-form-item>
         </div>
@@ -37,15 +29,19 @@
         </div>
       </div>
     </form>
-
+    <div class="my-md">
+      <button nz-button (click)="add(modalContent, 'Create New Network')" [nzType]="'primary'">
+        <i nz-icon nzType="plus"></i>
+        <span>New</span>
+      </button>
+    </div>
     <st
       #st
       [columns]="columns"
-      [data]="data"
       [widthMode]="{ type: 'strict', strictBehavior: 'wrap' }"
+      [data]="data"
       [loading]="loading"
-      (change)="stChange($event)"
-      [scroll]="{ x: '1064px' }"
+      [scroll]="{ x: '1300px' }"
     >
       <ng-template st-row="status" let-i>
         <nz-badge [nzStatus]="i.statusType" [nzText]="i.statusText"></nz-badge>
@@ -53,7 +49,7 @@
     </st>
   </nz-card>
 </div>
-
 <ng-template #modalContent>
-  <app-view-case [parent]="true" [caseParam]="caseParam"></app-view-case>
+  <app-create-network [parent]="true" [mode]="mode" [editData]="dataSelected" (saveDone)="closeModal($event)">
+  </app-create-network>
 </ng-template>
